force-app/main/default/objects/openq__Event_Speaker__c/fields/Formal_Presentation__c.field-meta.xml
<CustomField>
    <fullName>Formal_Presentation__c</fullName>
    <description>If KOL has given a formal presentation</description>
    <label>Formal Presentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>