force-app/main/default/objects/openq__Event_Speaker__c/fields/openq__Email__c.field-meta.xml
<CustomField>
    <fullName>openq__Email__c</fullName>
    <formula>openq__Speaker_Contact__r.openq__Physician_Email__c</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>