force-app/main/default/objects/openq__Event_Speaker__c/fields/openq__Event__c.field-meta.xml
<CustomField>
    <fullName>openq__Event__c</fullName>
    <label>Event</label>
    <referenceTo>openq__Event__c</referenceTo>
    <relationshipName>Event_Speakers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>