force-app/main/default/objects/openq__Event_Speaker__c/fields/Presentation_Title__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Title__c</fullName>
    <description>Title of presentation</description>
    <label>Presentation Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>