force-app/main/default/objects/openq__Event_Speaker__c/validationRules/openq__End_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>openq__End_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(openq__Event__r.openq__End_Date__c)</errorConditionFormula>
    <errorMessage>Save failed.  The Event does not have an End Date set.</errorMessage>
</ValidationRule>