force-app/main/default/objects/openq__Event_Speaker__c/validationRules/openq__Event_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>openq__Event_Type_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(openq__Event__r.openq__Type__c, &quot;&quot;)</errorConditionFormula>
    <errorMessage>Save failed.  This Speaker&apos;s Event does not have a Type set.</errorMessage>
</ValidationRule>