force-app/main/default/objects/openq__Event_Speaker__c/listViews/openq__All.listView-meta.xml
<ListView>
    <fullName>openq__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>